--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1>BLOW WILL BE THE DATA OF THE EXCEL</h1>
+<h1>BELOW WILL BE THE DATA OF THE EXCEL</h1>
   <p>Go down there will another way of displaying the data from excel</p>
 <iframe width="600" height="600" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=71D7FDB3E562D92D%21258&authkey=%21APtHT9AuwDWbHso&em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True"></iframe>
 <h1>SECOND WAY OF DISPLAYING DATA</h1>
